chore: Added README and small adjustments